k8s/cadvisor/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cadvisor
  labels:
    name: cadvisor
