k8s/cadvisor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadvisor
  namespace: monitoring 
  labels:
    app: cadvisor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cadvisor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cadvisor
    spec:
      containers:
      - name: cadvisor
        image: gcr.io/cadvisor/cadvisor
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: cadvisor
      volumes:
      - name: cadvisor
        hostPath:
          path: /opt/cadvisor/config
